--- a/ejercicio17/index.html
+++ b/ejercicio17/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 16</title>
+    <title>Ejercicio 17</title>
 </head>
 <body>
-    <h3>Ejercicio 16 - IF</h3>
+    <h3>Ejercicio 17 - Login</h3>
 
     <script src="js/script.js"></script>
 </body>
